Fix layout issues of rates in search results page

--- a/src/targets/beacon/styles/views/room-products.less
+++ b/src/targets/beacon/styles/views/room-products.less
@@ -245,9 +245,9 @@ room-products {
         }
       }
 			&.is-highlighted {
-				background: rgba(229, 119, 26, 0.17);
+				background-color: #fff;
 				.chain-sign & {
-					background:rgba(253, 125, 13, 0.11);
+					background-color: #fff;
 				}
 			}
 			&.is-member-only.is-member-only-disabled {
@@ -334,6 +334,7 @@ room-products {
 					color: @c-light-brown;
 					.highlight-ribbon {
 						right:-18px;
+            display: none;
 					}
 				}
 				.chain-sign & {
